# cert-pareto-v1.0.0

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  codemeta.json  pyproject.toml
.github/ISSUE_TEMPLATE/: documentation.md  wrong_verdict.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_scaling.py  generate_figures.py  scaling.csv
docs/: API.md  JOSS_PRE_SUBMISSION_DOSSIER.md  JOSS_REVIEWER_RESPONSES.md  QUALITY_ASSURANCE.md  benchmark_run_log.txt  benchmark_scaling.csv  build_twine_check_log.txt  cli_verify_log.txt  examples_run_log.txt  module_demo_log.txt  style_fingerprint_report.txt  test_run_log.txt  zero_dependency_test_run_log.txt
examples/: exact_supported.py  exact_vs_tolerance.py  export_certificate_demo.py  fractional_metric_demo.py  pac_audit_demo.py  robust_margin_demo.py  unsupported_counterexample.py
paper/: paper.bib  paper.md
schema/: certificate-v1.schema.json
src/cert_pareto/: __init__.py  artefact.py  cli.py  finite.py  pac.py  ratios.py  robust.py  verdicts.py
tests/: _helpers.py  conftest.py  run_tests.py  test_artefact.py  test_cli.py  test_finite.py  test_finite_additional.py  test_pac.py  test_ratios.py  test_robust.py
tools/: style_fingerprint_check.py
